--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello!</p>
+    <div class="calculator-body">
+        <div class="calculator-screen"></div>
+        <div class="calculator-buttons">
+            <div class="row1">
+                <button class="clear">AC</button>
+                <button class="negative">+/-</button>
+                <button class="percent">%</button>
+                <button class="divide">÷</button>
+            </div>
+            <div class="row2">
+                <button class="seven">7</button>
+                <button class="eight">8</button>
+                <button class="nine">9</button>
+                <button class="multiply">×</button>
+            </div>
+            <div class="row3">
+                <button class="four">4</button>
+                <button class="five">5</button>
+                <button class="six">6</button>
+                <button class="minus">-</button>
+            </div>
+            <div class="row4">
+                <button class="one">1</button>
+                <button class="two">2</button>
+                <button class="three">3</button>
+                <button class="add">+</button>
+            </div>
+            <div class="row5">
+                <button class="number">#</button>
+                <button class="zero">0</button>
+                <button class="decimal">.</button>
+                <button class="equals">=</button>
+            </div>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
