--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>TOD | Calculator</title>
 </head>
 <body>
     <div class="calculator-body">
@@ -14,29 +14,29 @@
                 <button class="clear">AC</button>
                 <button class="negative">+/-</button>
                 <button class="percent">%</button>
-                <button class="divide">÷</button>
+                <button class="divide oper">÷</button>
             </div>
             <div class="row2">
-                <button class="seven">7</button>
-                <button class="eight">8</button>
-                <button class="nine">9</button>
-                <button class="multiply">×</button>
+                <button class="seven number">7</button>
+                <button class="eight number">8</button>
+                <button class="nine number">9</button>
+                <button class="multiply oper">x</button>
             </div>
             <div class="row3">
-                <button class="four">4</button>
-                <button class="five">5</button>
-                <button class="six">6</button>
-                <button class="minus">-</button>
+                <button class="four number">4</button>
+                <button class="five number">5</button>
+                <button class="six number">6</button>
+                <button class="minus oper">-</button>
             </div>
             <div class="row4">
-                <button class="one">1</button>
-                <button class="two">2</button>
-                <button class="three">3</button>
-                <button class="add">+</button>
+                <button class="one number">1</button>
+                <button class="two number">2</button>
+                <button class="three number">3</button>
+                <button class="add oper">+</button>
             </div>
             <div class="row5">
                 <button class="number">#</button>
-                <button class="zero">0</button>
+                <button class="zero number">0</button>
                 <button class="decimal">.</button>
                 <button class="equals">=</button>
             </div>
