Completed full calculator

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>TOD | Calculator</title>
+    <title>TOP | Calculator</title>
 </head>
 <body>
     <div class="calculator-body">
@@ -12,7 +12,7 @@
         <div class="calculator-buttons">
             <div class="row1">
                 <button class="clear">AC</button>
-                <button class="negative">+/-</button>
+                <button class="backspace">DEL</button>
                 <button class="percent">%</button>
                 <button class="divide oper">÷</button>
             </div>
@@ -35,7 +35,7 @@
                 <button class="add oper">+</button>
             </div>
             <div class="row5">
-                <button class="number">#</button>
+                <button class="negative">+/-</button>
                 <button class="zero number">0</button>
                 <button class="decimal">.</button>
                 <button class="equals">=</button>
